test/invalid/41625_DirectCycle/A.plume
/**
 * Invalid Test. 
 * Class hierarchy must be acyclic. 
 * @author FábioBotelho - 41625@alunos.fc.ul.pt
 * @version $id 
 */
 
 class A extends A is
 	
 